--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         线路1
                     </span>
                     <strong>
-                        <a href="https://www.baidu.com" target="_blank">
+                        <a href="https://www.jaysi.cn" target="_blank">
                             点击进入
                         </a>
                     </strong>
